--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script></script>
     <link rel="stylesheet" href="style.css" />
     <!-- <script src="script.js" defer></script> -->
-    <script src="script2.js" defer></script>
+    <script src="script.js" defer></script>
   </head>
   <body>
     <header class="header">
