--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="codelab" content="getting-started-w-web-serial" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <script src="https://unpkg.com/encoding-japanese@2.2.0/encoding.min.js"></script>
     <script></script>
     <link rel="stylesheet" href="style.css" />
     <!-- <script src="script.js" defer></script> -->
